--- a/test_app/Dockerfile
+++ b/test_app/Dockerfile
@@ -2,10 +2,10 @@ FROM ubuntu:trusty
 MAINTAINER treylitefm
 
 RUN apt-get update && apt-get upgrade -y
-RUN apt-get install -y python python-pip supervisor redis-tools 
+RUN apt-get install -y python python-pip
 
 RUN pip install --upgrade pip
-RUN pip install flask flask-bcrypt flask-cors rq
+RUN pip install flask flask-bcrypt flask-cors
 
 EXPOSE 5000
 
