--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,1 @@
-version: "2"
-services:
-    hermes:
-        container_name: hermes
-        build:
-            context: main
-            dockerfile: Dockerfile
-        image: treylitefm/hermes
-        volumes:
-            - $PWD/main/src:/var/main
-        ports:
-            - "8000:8000"
-        links:
-            - postgres
-        depends_on:
-            - postgres
-        entrypoint: /bin/bash
-    test_app:
-        container_name: flask_test_app
-        build: 
-            context: test_app
-            dockerfile: Dockerfile
-        image: treylitefm/flask_test_app
-        ports:
-            - "5000:5000"
-        volumes:
-            - $PWD/test_app/src:/var/test_app
-        entrypoint: python server.py
-    postgres:
-        container_name: postgres-server
-        image: postgres
-        ports: 
-            - "5432:5432"
+docker-compose-monitor.yml
