Update dockerfile and docker-compose yml for monitor
Signed-off-by: treylitefm <griffin.omar@gmail.com>

--- a/monitor/Dockerfile
+++ b/monitor/Dockerfile
@@ -3,12 +3,12 @@ MAINTAINER treylitefm
 
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y python python-pip
-RUN apt-get install -y default-jre #200+MB download :/
+#RUN apt-get install -y default-jre #200+MB download :/
 
 RUN pip install --upgrade pip
-RUN pip install flask flask-bcrypt flask-cors 
+RUN pip install flask flask-cors 
 
-RUN pip install selenium browsermob-proxy supervisor rq
+#RUN pip install selenium browsermob-proxy supervisor rq
 
 #EXPOSE 5000
 
