--- a/docker-compose-monitor.yml
+++ b/docker-compose-monitor.yml
@@ -1,35 +1,38 @@
-monitor:
-  image: treylitefm/monitor
-  volumes:
-      - $PWD/monitor/src:/var/monitor
-      - $PWD/main/src/static:/var/monitor/static
-  links:
-      - hub
-      - redis
-  ports:
-      - "6000:6000"
-  expose:
-      - "8080-9099"
-  restart: always
-hub:
-  image: selenium/hub
-  ports:
-    - "4444:4444"
-  restart: always
-firefox:
-  image: selenium/node-firefox
-  links:
-    - hub
-    - monitor
-  restart: always
-chrome:
-  image: selenium/node-chrome
-  links:
-    - hub
-    - monitor
-  restart: always
-redis:
-  container_name: redis-server
-  image: redis
-  ports:
-    - "6379:6379"
+version: "2"
+services:
+    monitor:
+        image: treylitefm/monitor
+        volumes:
+            - $PWD/monitor/src:/var/monitor
+            - $PWD/main/src/static:/var/monitor/static
+        ports:
+            - "6000:6000"
+        expose:
+            - "8080-9099"
+        restart: always
+    hub:
+        image: selenium/hub
+        ports:
+            - "4444:4444"
+        restart: always
+    firefox:
+        image: selenium/node-firefox
+        restart: always
+        environment:
+            - HUB_PORT_4444_TCP_PORT=4444
+            - HUB_PORT_4444_TCP_ADDR=hub
+    chrome:
+        image: selenium/node-chrome
+        restart: always
+        environment:
+            - HUB_PORT_4444_TCP_PORT=4444
+            - HUB_PORT_4444_TCP_ADDR=hub
+    redis:
+        container_name: redis-server
+        image: redis
+        ports:
+            - "6379:6379"
+networks:
+    default:
+        external:
+            name: hermes
