--- a/monitor/Dockerfile
+++ b/monitor/Dockerfile
@@ -2,13 +2,13 @@ FROM ubuntu:trusty
 MAINTAINER treylitefm
 
 RUN apt-get update && apt-get upgrade -y
-RUN apt-get install -y python python-pip
+RUN apt-get install -y python python-pip redis-tools
 #RUN apt-get install -y default-jre #200+MB download :/
 
 RUN pip install --upgrade pip
 RUN pip install flask flask-cors 
 
-#RUN pip install selenium browsermob-proxy supervisor rq
+RUN pip install selenium browsermob-proxy supervisor rq
 
 #EXPOSE 5000
 
