Update docker compose network name
Signed-off-by: treylitefm <griffin.omar@gmail.com>

--- a/docker-compose-hermes.yml
+++ b/docker-compose-hermes.yml
@@ -41,3 +41,7 @@ services:
         image: postgres
         ports: 
             - "5432:5432"
+networks:
+    default:
+        external:
+            name: hermes
